Frontend body finish TODO: Cart modal

--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
     </nav>
 
     <header class="header">
-        <h1>The new amazon (No fake)</h1>
-        <p>
-            Welcome in the most iconic future marketplace with <span class="bold">amazing</span> features!😎
-        </p>
+        <div class="text">
+            <h1>The new amazon (No fake)</h1>
+            <p>
+                Welcome in the most iconic future marketplace with <span class="bold">amazing</span> features!😎
+            </p>
+        </div>
+        
         <div class="header--wave">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 200">
                 <path fill="#3742fa" fill-opacity="1" d="M0,160L60,133.3C120,107,240,53,360,53.3C480,53,600,107,720,128C840,149,960,139,1080,144C1200,149,1320,171,1380,181.3L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z" data-darkreader-inline-fill="" style="--darkreader-inline-fill:#007acc;"></path>
             </svg>
 
