--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./default.css">
-    <script src="./app.js" async></script>
+    <script src="./js/app.js" async></script>
+    <script src="./js/modal.js" async></script>
     <title>The new Amazon</title>
 
     
@@ -16,6 +17,9 @@
     <symbol id="github" viewBox="0 0 512 512">
         <path fill="currentColor" d="M256 32C132.3 32 32 134.9 32 261.7c0 101.5 64.2 187.5 153.2 217.9a17.56 17.56 0 003.8.4c8.3 0 11.5-6.1 11.5-11.4 0-5.5-.2-19.9-.3-39.1a102.4 102.4 0 01-22.6 2.7c-43.1 0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1 1.4-14.1h.1c22.5 2 34.3 23.8 34.3 23.8 11.2 19.6 26.2 25.1 39.6 25.1a63 63 0 0025.6-6c2-14.8 7.8-24.9 14.2-30.7-49.7-5.8-102-25.5-102-113.5 0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8a18.64 18.64 0 015-.5c8.1 0 26.4 3.1 56.6 24.1a208.21 208.21 0 01112.2 0c30.2-21 48.5-24.1 56.6-24.1a18.64 18.64 0 015 .5c12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6 0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5 0 30.7-.3 55.5-.3 63 0 5.4 3.1 11.5 11.4 11.5a19.35 19.35 0 004-.4C415.9 449.2 480 363.1 480 261.7 480 134.9 379.7 32 256 32z"/>
     </symbol>
+    <symbol id="file" viewBox="0 0 512 512">
+        <path d="M384 80H128c-26 0-43 14-48 40L48 272v112a48.14 48.14 0 0048 48h320a48.14 48.14 0 0048-48V272l-32-152c-5-27-23-40-48-40z" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="32"/><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M48 272h144M320 272h144M192 272a64 64 0 00128 0"/>
+    </symbol>
 </svg>
 </head>
 <body>
@@ -24,17 +28,17 @@
         <div class="nav_title">
             New Amazon
         </div>
-        <menu class="nav-menu">
+        <div class="nav-menu">
             <div class="nav-menu_item"><a href="#">Home</a></div>
-            <div class="nav-menu_item"><a href="#">Market</a></div>
-            <div class="nav-menu_item"><a href="#">Admin</a></div>
-            <div class="nav-menu_item--image"><a href="#"><svg><use xlink:href="#cart"></use></svg></a></div>
+            <div class="nav-menu_item"><a href="#market">Market</a></div>
+            <div class="nav-menu_item" id="adminButton">Admin</div>
+            <div class="nav-menu_item--image" id="cartButton"><svg><use xlink:href="#cart"></use></svg></div>
 
-        </menu>
+        </div>
     </nav>
 
     <header class="header">
-        <div class="text">
+        <div class="header--text">
             <h1>The new amazon (No fake)</h1>
             <p>
                 Welcome in the most iconic future marketplace with <span class="bold">amazing</span> features!😎
@@ -49,7 +53,7 @@
         </div>
     </header>
 
-    <section class="market">
+    <section class="market" id="market">
 
         <h2>Market</h2>
         <p>Buy what you want !</p>
@@ -128,5 +132,82 @@
         </menu>
     </footer>
 
+    <!-- Modal -->
+    <div class="market-modal" id="marketModal">
+        <div class="market-modal__content">
+            <div class="close" id="marketModalClose">&times;</div>
+            <div class="title">
+                <h3>Welcome in your cart</h3>
+            </div>
+            <div class="market-content-items">
+
+                <div class="cart-item">
+                    <div class="cart-item__image">
+                        <img src="img/Chocolate-min.png" alt="A beautiful apple">
+                    </div>
+                    <div class="cart-item__info">
+                        <div class="info__title">
+                            Impressive chocolate
+                        </div>
+                        <div class="info__control">
+                            <div class="info__button">-</div>
+                            <div class="info__number">5</div>
+                            <div class="info__button">+</div>
+                        </div>
+                    </div>
+                    <div class="cart-item__price">
+                        27.5$
+                    </div>
+                </div>
+
+                <div class="cart-item">
+                    <div class="cart-item__image">
+                        <img src="img/Banana-min.png" alt="A beautiful apple">
+                    </div>
+                    <div class="cart-item__info">
+                        <div class="info__title">
+                            Delicious banana
+                        </div>
+                        <div class="info__control">
+                            <div class="info__button">-</div>
+                            <div class="info__number">5</div>
+                            <div class="info__button">+</div>
+                        </div>
+                    </div>
+                    <div class="cart-item__price">
+                        27.5$
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="admin-modal" id="adminModal">
+        <div class="admin-modal__content">
+            <div class="close" id="adminModalClose">&times;</div>
+            <div class="title">
+                <h3>Welcome in the admin pannel</h3>
+            </div>
+
+            <div class="admin-form">
+                <form action="#" method="POST">
+                    <input type="file" name="itemImage" id="itemImage" accept=".png">
+
+                    <label for="itemTitle">Name</label>
+                    <input type="text" name="itemTitle" id="itemTitle" placeholder="Enter the title of item">
+
+                    <label for="itemPrice">Price for 1</label>
+                    <input type="text" name="itemPrice" id="itemPrice" placeholder="Enter the price for one item">
+
+                    <label for="itemPriceWheight">Price for 1lb</label>
+                    <input type="text" name="itemPriceWheight" id="itemPriceWheight" placeholder="Enter the for 1lb of item">
+
+                    <input type="submit" value="Send">
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
