--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./default.css">
     <script src="./js/app.js" async></script>
-    <script src="./js/modal.js" async></script>
     <title>The new Amazon</title>
 
     
@@ -191,8 +190,8 @@
             </div>
 
             <div class="admin-form">
-                <form action="#" method="POST">
-                    <input type="file" name="itemImage" id="itemImage" accept=".png">
+                <form action="">
+                    <!-- <input type="file" name="itemImage" id="itemImage" accept=".png"> -->
 
                     <label for="itemTitle">Name</label>
                     <input type="text" name="itemTitle" id="itemTitle" placeholder="Enter the title of item">
