Add cross to remove item market and information modal bottom right

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         <h2>Market</h2>
         <p>Buy what you want !</p>
 
-        <div class="market-item">
+        <!-- <div class="market-item">
             <div class="market-item__image">
                 <img src="./assets/img/Apple-min.png" alt="A beautiful apple">
             </div>
@@ -75,47 +75,10 @@
             <div class="market-item__price">
                 3.5$
             </div>
-        </div>
-
-        <div class="market-item">
-            <div class="market-item__image">
-                <img src="./assets/img/Banana-min.png" alt="A beautiful apple">
+            <div class="market-item__remove">
+                &times;
             </div>
-            <div class="market-item__info">
-                <div class="info__title">
-                    Delicious bana
-                </div>
-                <div class="info__wheight-price">
-                    10$/lb
-                </div>
-                <div class="info__add">
-                    Add
-                </div>
-            </div>
-            <div class="market-item__price">
-                1.5$
-            </div>
-        </div>
-
-        <div class="market-item">
-            <div class="market-item__image">
-                <img src="./assets/img/Chocolate-min.png" alt="A beautiful apple">
-            </div>
-            <div class="market-item__info">
-                <div class="info__title">
-                    Impressive chocolate
-                </div>
-                <div class="info__wheight-price">
-                    80$/lb
-                </div>
-                <div class="info__add">
-                    Add
-                </div>
-            </div>
-            <div class="market-item__price">
-                5.5$
-            </div>
-        </div>
+        </div>  -->
 
     </section>
     
@@ -205,6 +168,15 @@
                     <input type="submit" value="Send">
                 </form>
             </div>
+        </div>
+    </div>
+
+    <div class="info-modal" id="infoModal">
+        <div class="info-type">
+            Succes
+        </div>
+        <div class="info-message">
+             
         </div>
     </div>
 </body>
