--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,6 @@
         <div class="nav-menu">
             <div class="nav-menu_item"><a href="#">Home</a></div>
             <div class="nav-menu_item"><a href="#market">Market</a></div>
-            <div class="nav-menu_item" id="adminButton">Admin</div>
-            <div class="nav-menu_item--image" id="cartButton"><svg><use xlink:href="#cart"></use></svg></div>
-
         </div>
     </nav>
 
@@ -57,29 +54,6 @@
         <h2>Market</h2>
         <p>Buy what you want !</p>
 
-        <!-- <div class="market-item">
-            <div class="market-item__image">
-                <img src="./assets/img/Apple-min.png" alt="A beautiful apple">
-            </div>
-            <div class="market-item__info">
-                <div class="info__title">
-                    Beautiful apple
-                </div>
-                <div class="info__wheight-price">
-                    50$/lb
-                </div>
-                <div class="info__add">
-                    Add
-                </div>
-            </div>
-            <div class="market-item__price">
-                3.5$
-            </div>
-            <div class="market-item__remove">
-                &times;
-            </div>
-        </div>  -->
-
     </section>
     
     <footer class="footer">
@@ -103,7 +77,7 @@
             </div>
             <div class="market-content-items">
 
-                <div class="cart-item">
+                <!-- <div class="cart-item">
                     <div class="cart-item__image">
                         <img src="./assets/img/Chocolate-min.png" alt="A beautiful apple">
                     </div>
@@ -120,9 +94,9 @@
                     <div class="cart-item__price">
                         27.5$
                     </div>
-                </div>
+                </div> -->
 
-                <div class="cart-item">
+                <!-- <div class="cart-item">
                     <div class="cart-item__image">
                         <img src="./assets/img/Banana-min.png" alt="A beautiful apple">
                     </div>
@@ -139,7 +113,7 @@
                     <div class="cart-item__price">
                         27.5$
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
@@ -168,15 +142,6 @@
                     <input type="submit" value="Send">
                 </form>
             </div>
-        </div>
-    </div>
-
-    <div class="info-modal" id="infoModal">
-        <div class="info-type">
-            Succes
-        </div>
-        <div class="info-message">
-             
         </div>
     </div>
 </body>
